contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/storage/fail/multiple_storage_kinds.rs
// UI (trybuild) negative test: variant must specify exactly one storage kind.

#[common_macros::storage]
pub enum StorageKey {
    #[instance(u32)]
    #[persistent(u32)]
    Counter,
}

fn main() {}
